07-istio/mixedfault/app-virtual-service.1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - myapp
  http:
  - fault:
      abort:
        httpStatus: 500
        percent: 20
    route:
    - destination:
        host: myapp
        subset: v1
      weight: 50
