07-istio/mixedfault/app-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp-v2
spec:
  hosts:
  - myapp
  http:
  - fault:
      delay:
        fixedDelay: 1s
        percent: 100
    route:
    - destination:
        host: myapp
        subset: v2
      weight: 50
